docs/tests/nameres/control_flow/valid/Continue.src
// Valid

fn void main() {
    continue;
}