docs/tests/nameres/control_flow/invalid/DoWhileNoWhile.src
// Invalid

fn void main() {
    do {
        
    };
}